--- a/index.html
+++ b/index.html
@@ -1,79 +1,55 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Reda Mhabbis</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="top-container">
+      <img class="first-cloud"src="images/cloud.png" alt="cloud-img">
+      <h1>I'm Reda.</h1>
+      <h2 class="opening">a <span class="pro">Pro</span>grammer.</h2>
+      <img class="second-cloud"src="images/cloud.png" alt="cloud-img">
+      <img src="images/mountain.png" alt="mountain-img">
+    </div>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="images/small.png" alt="">
+        <h2>Hello.</h2>
+        <p>Welcome to my personal site</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row1">
+          <img class="computer" src="images/computer.png" alt="computer">
+          <h3>Software development</h3>
+          <p>Oil & Gas Software development tools.</p>
+        </div>
+        <div class="skill-row2">
+          <img class="ESP" src="images/ESP.png" alt="">
+          <h3>ESP Monitoring System</h3>
+          <p>Monitor & Optmize ESP system, reduce non-productive time and improve ESP performance and runtime.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Reda Elmahbes.</h3>
+        <p class="in-touch-decription">Is your production decline due failures with ESP? FieldConnect can help you to reduce non-productive time and improve your ESP perfoamnce and reduce your CAPEX and OPEX!.</p>
+        <a class="btn" href="mailto:reda.mhabbis@fieldconnectLY.com">CONTACT ME</a>
+      </div>
+    </div>
 
-<head>
-  <meta charset="utf-8">
-  <title>Reda's Personal Site</title>
-</head>
 
-<body>
-  <table cellspacing = "20">
-    <tr>
-      <td><img src="Images/small.png" alt="ESP automation System"></td>
-      <td><h1>Reda Elmahbes</h1>
-      <p><em>Field Connect Solution <strong><a href="https://www.broadcom.com/products/mainframe/workload-automation/esp-edition">Co-Founder</a></strong>.</em></p>
-      <p>Visinoray oil & Gas developer</p></td>
-    </tr>
-  </table>
-
-  <hr>
-  <h3>Puplications & Education</h3>
-  <ul>
-    <li>Artificial Lift Production System Sizing and Simulation Software SPE-183534</li>
-    <li>Overcoming Electrical Submersible Pumping Production Challenges in Highly Deviated Wells SPE-186250</li>
-    <li>Improve Production in Unconventional Oil Wells Using Artificial Sump Pumping System SPE-186254</li>
-    <li>Enhance ESP Performance in Sandy and Gassy Applications SPE 186371</li>
-    <li>Reducing Non-Production Time with Thru-Tubing Conveyed ESP System SPE 192471</li>
-    <li>Reducing Non-Production Time with Thru-Tubing Conveyed ESP System SPE 192471</li>
-    <li>Downhole Gas Separation in a High-GLR CO Application SPE-194396</li>
-  </ul>
-  <a href="patent.html">My Patent</a>
-  <hr>
-  <h3>My Hobbies</h3>
-  <ol>
-    <li>Surfing</li>
-    <li>Reading</li>
-    <li>Programming</li>
-    <li>Soccer</li>
-  </ol>
-  <hr>
-  <h3>Work Experince</h3>
-  <table cellspacing="10">
-    <thead>
-      <th>Date</th>
-      <th>Job</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2008-2011</td>
-        <td>Baker Hughes Libya FS Engineer</td>
-      </tr>
-      <tr>
-        <td>2011</td>
-        <td>OXY Application Engineer</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-
-<table cellspacing="10">
-        <tr>
-          <td>AuographPC</td>
-          <td>⭐⭐⭐⭐⭐</td>
-        </tr>
-        <tr>
-          <td>Visual Studio</td>
-          <td>⭐⭐</td>
-        </tr>
-        <tr>
-          <td>JavaScript</td>
-          <td>⭐</td>
-        </tr>
-      </table>
-
-  <hr>
-  <a href="contactInfo.html">Contact Information</a>
-</body>
-
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/feed/">LinkedIn</a>
+      <a class="footer-link" href="https://www.facebook.com/">Facebook</a>
+      <a class="footer-link" href="https://www.fieldconnectLY.com/">Website</a>
+      <p class="copyright">© 2021 Reda Elmahbes.</p>
+    </div>
+  </body>
 </html>
